WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52559
[Qt] Incorrect shadow alpha with pattern fillStyle
https://bugs.webkit.org/show_bug.cgi?id=52559
Summary
[Qt] Incorrect shadow alpha with pattern fillStyle
Helder Correia
Reported
2011-01-17 01:00:45 PST
This is related to
bug 52556
. Pattern fillStyle has the same issue.
Attachments
Patch
(9.29 KB, patch)
2011-01-17 01:22 PST
,
Helder Correia
no flags
Details
Formatted Diff
Diff
Patch
(9.86 KB, patch)
2011-01-17 01:40 PST
,
Helder Correia
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Helder Correia
Comment 1
2011-01-17 01:22:17 PST
Created
attachment 79140
[details]
Patch
Helder Correia
Comment 2
2011-01-17 01:40:09 PST
Created
attachment 79141
[details]
Patch
Andreas Kling
Comment 3
2011-01-17 12:14:57 PST
Comment on
attachment 79141
[details]
Patch LGTM!
WebKit Commit Bot
Comment 4
2011-01-17 14:55:02 PST
Comment on
attachment 79141
[details]
Patch Clearing flags on attachment: 79141 Committed
r75973
: <
http://trac.webkit.org/changeset/75973
>
WebKit Commit Bot
Comment 5
2011-01-17 14:55:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug