2011-01-17  Helder Correia  <helder@sencha.com>

Reviewed by Andreas Kling.

        [Qt] Incorrect shadow alpha with pattern fillStyle
        https://bugs.webkit.org/show_bug.cgi?id=52559

        The shadow color opacity needs to be set on the shadow painter.
        This is related to bug 52556.

        * fast/canvas/canvas-fillPath-pattern-shadow-expected.txt: Added.
        * fast/canvas/canvas-fillPath-pattern-shadow.html: Added.
        * fast/canvas/script-tests/canvas-fillPath-pattern-shadow.js: Added.
2011-01-17  Helder Correia  <helder@sencha.com>

        Reviewed by Andreas Kling.

        [Qt] Incorrect shadow alpha with pattern fillStyle
        https://bugs.webkit.org/show_bug.cgi?id=52559

        The shadow color opacity needs to be set on the shadow painter.
        This is related to bug 52556.

        Test: fast/canvas/canvas-fillPath-pattern-shadow.html

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::fillPath):

Canonical link: https://commits.webkit.org/66215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75973 268f45cc-cd09-0410-ab3c-d52691b4dbfc